# climatefind

./: .gitignore  README.md  climatefind.py  comfyness_report.csv  config.yml  dataframe_ref.txt  interpolate.orig.py  interpolate.py
comfort_models/: comfort_models.py
data/one/: jacksonville.CSV
data/small/: bridgeport.CSV  denver.CSV  phoenix.CSV  sanfrancisco.CSV
ghcn/: .gitignore
ghcn/app/: pyproject.toml
ghcn/app/climatefind/: __init__.py  main.py  utils.py
ghcn/app/tests/: test_climatefind.py
ghcn/app/tests/input/queue/: US1WVBB0001.csv  USS0005M08S.csv
ghcn/archive/: README.md
ghcn/doc/: README.md  ny.txt  wv.txt
ghcn/env/: env.yml
ghcn/input/: README.md
ghcn/output/: README.md  aug_1_tmin.html  average_comfy_days.html  contour.html  test.html
ghcn/spool/: README.md
tmy3/: .gitignore  climatefind.py  interpolate.py
tmy3/comfort_models/: __init__.py  comfort_models.py
tmy3/data/: dataframe_ref.txt
tmy3/data/small/: estherville.CSV  martha.CSV
